# dtOO

./: .buildinfo  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.quickstart  LICENSE.txt  README  README.txt  Readme.md  analyticFunction.html  analyticGeometry.html  api.html  boundedVolume.html  buildDep  constValue.html  demonstration.html  dtCase.html  dtPlugin.html  genindex.html  index.html  map2dTo3d.cpp  map2dTo3d.h  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  test.html
application/: CMakeLists.txt
application/blueKenue2Foam/: CMakeLists.txt  blueKenue2Foam.cpp
application/built4CubanLinx/: CMakeLists.txt  built4CubanLinx.cpp
application/createState/: CMakeLists.txt  createState.cpp
application/cubanLinxShell/: CMakeLists.txt  cubanLinxShell.cpp
application/dtOOToSAFE/: CMakeLists.txt  dtOOToSAFE.cpp  readCsvParseArg.cpp  resultValueParseArg.cpp
application/listLabel/: CMakeLists.txt  listLabel.cpp
application/listState/: CMakeLists.txt  listState.cpp
application/runCase/: CMakeLists.txt  runCase.cpp
application/stateToCSV/: CMakeLists.txt  stateToCSV.cpp
coviseGUIHeaven/: CMakeLists.txt  abstractModule.cpp  abstractModule.h  coDoSetHandling.cpp  coDoSetHandling.h  designTool.cpp  designTool.h  relabs.cpp  relabs.h  simCaller.cpp  simCaller.h
deprecatedStuff/blockMesher/: CMakeLists.txt  blockMesher.cpp  blockMesher.h  dtBmDevelopStuff.cpp  dtBmDevelopStuff.h  dtBmGrid.cpp  dtBmGrid.h
deprecatedStuff/dtOOAGeoToXYZ/: CMakeLists.txt  aGeoToXYZ.cpp  aGeoToXYZ.h
deprecatedStuff/dtOOCVOptimizer/: CMakeLists.txt  cvOptimizer.cpp  cvOptimizer.h
deprecatedStuff/dtOOConstValueGenerator/: CMakeLists.txt  constValueGenerator.cpp  constValueGenerator.h
deprecatedStuff/dtOOGeoGen/: CMakeLists.txt  geoGen.cpp  geoGen.h
deprecatedStuff/dtOOGodMode/: CMakeLists.txt  godMode.cpp  godMode.h
deprecatedStuff/dtOOMesher/: CMakeLists.txt  mesher.cpp  mesher.h
deprecatedStuff/dtOOMesherOpt/: CMakeLists.txt  mesherOpt.cpp  mesherOpt.h
deprecatedStuff/dtOORuOpti/: CMakeLists.txt  ruOpti.cpp  ruOpti.h
deprecatedStuff/dtOOSFGen/: CMakeLists.txt  sFGen.cpp  sFGen.h
deprecatedStuff/dtOOSFGenOpt/: CMakeLists.txt  sFGenOpt.cpp  sFGenOpt.h
deprecatedStuff/dtOOWriteIges/: CMakeLists.txt  writeIges.cpp  writeIges.h
deprecatedStuff/dtOOWriteXy/: CMakeLists.txt  writeXy.cpp  writeXy.h
doc/: CMakeLists.txt  Doxyfile  Makefile  api.rst  conf.py  constValue.rst  createInclude.py  demonstration.rst  index.rst  quickstart.md  quickstart.rst  test.rst
examples/02_useAsLib/: CMakeLists.txt  main.cpp  simple.xml  test.xml
src/: CMakeLists.txt
src/applicationKernel/: CMakeLists.txt  dtArg.cpp  dtArg.h
src/generalKernel/: CMakeLists.txt  deprecatedMacro.h  dtOOTypeDef.h  mainConceptFwd.h  progHelper.cpp  progHelper.h
src/geometryKernel/: CMakeLists.txt
src/libraryKernel/: CMakeLists.txt  GSLError.h  dtAnalysis.cpp  dtAnalysis.h  dtGaussLegendreIntegration.cpp  dtGaussLegendreIntegration.h  dtLinearAlgebra.cpp  dtLinearAlgebra.h  gslGradMinFloatAttr.cpp  gslGradMinFloatAttr.h  gslMinFloatAttr.cpp  gslMinFloatAttr.h  minFloatAttr.cpp  minFloatAttr.h
src/meshKernel/: CMakeLists.txt  boundedVolume.cpp  boundedVolume.h  boundedVolumeFactory.cpp  boundedVolumeFactory.h  combineGmsh.cpp  combineGmsh.h  customGmsh.cpp  customGmsh.h  gmshBoundedVolume.cpp  gmshBoundedVolume.h  map2dTo3dTriangulated.cpp  map2dTo3dTriangulated.h  map3dTo3dGmsh.cpp  map3dTo3dGmsh.h  map3dTo3dWithInternalBlockGmsh.cpp  map3dTo3dWithInternalBlockGmsh.h  map3dTo3dWithInternalGmsh.cpp  map3dTo3dWithInternalGmsh.h  map3dTo3dWithInternalTurboGrid.cpp  map3dTo3dWithInternalTurboGrid.h  readMOABMesh.cpp  readMOABMesh.h
src/pluginKernel/: CMakeLists.txt  UcylInChannel.cpp  UcylInChannel.h  analyticFunctionToCSV.cpp  analyticFunctionToCSV.h  analyticGeometryToCSV.cpp  analyticGeometryToCSV.h  analyzeDraftTube.cpp  analyzeDraftTube.h  constValueAssingRule.cpp  constValueAssingRule.h  dtPlugin.cpp  dtPlugin.h  dtPluginDriver.cpp  dtPluginDriver.h  dtPluginFactory.cpp  dtPluginFactory.h  dtPluginKernel.cpp  dtPluginKernel.h  meshQuality.cpp  meshQuality.h  pOnBlade.cpp  pOnBlade.h  uRelInChannel.cpp  uRelInChannel.h  volScalarFieldRange.cpp  volScalarFieldRange.h  volScalarFieldVersusL.cpp  volScalarFieldVersusL.h  volScalarInChannelFieldRange.cpp  volScalarInChannelFieldRange.h  volScalarOnLineFieldRange.cpp  volScalarOnLineFieldRange.h  volScalarPatchFieldRange.cpp  volScalarPatchFieldRange.h  volVectorFieldRange.cpp  volVectorFieldRange.h  volVectorFieldVersusXYZ.cpp  volVectorFieldVersusXYZ.h  volVectorInChannelFieldRange.cpp  (+7 more)
src/renderKernel/: CMakeLists.txt  discrete2dPoints.cpp  discrete2dPoints.h  discrete3dPoints.cpp  discrete3dPoints.h  discrete3dVector.cpp  discrete3dVector.h  solid2dLine.cpp  solid2dLine.h  solid3dLine.cpp  solid3dLine.h  solid3dSurface.cpp  solid3dSurface.h  unstructured3dMesh.cpp  unstructured3dMesh.h  unstructured3dSurfaceMesh.cpp  unstructured3dSurfaceMesh.h
src/solverKernel/: CMakeLists.txt  dtCase.cpp  dtCase.h  dtCaseFactory.cpp  dtCaseFactory.h
test/: CMakeLists.txt
test/analyticGeometrySWIG/: build.py
test/base/: build.py  machineSave.xml
test/baseSWIG/: build.py  machine.xml
test/bench_sm/: sm.py
test/canadaLight/: E1_12685.xml  build.py  gmshMeshFile  init.xml  machine.xml
test/constValueSWIG/: build.py
test/dtClusteredSingletonState/: build.py
test/floatAtt/: floatAtt.py
test/interTransMesh/: interTransMesh.py
test/labeledVectorHandlingSWIG/: labeledVectorHandlingSWIG.py
test/meshCuboid/: cBoundVol_debug.msh  dtMeshGRegion_dtMeshGRegionWithBoundaryLayer_0.msh  dtMeshGRegion_dtMeshGRegionWithBoundaryLayer_dtMeshGRegionWithBoundaryLayer_0.vtk  dtMeshGRegion_dtMeshGRegionWithBoundaryLayer_dtMeshGRegionWithBoundaryLayer_1.vtk  dtMeshGRegion_dtMeshGRegionWithBoundaryLayer_dtMeshGRegionWithBoundaryLayer_moved_1.vtk  meshCuboid.py  meshCuboid~CoraE2.1-261-gf1189736~gcc-12.3.0~opensuse-leap~15.6.msh.xz
test/naca/: build.py  (+13 more)
tools/: CMakeLists.txt
(+2921 files in other folders)
