#------------------------------------------------------------------------------#
#
# add directories
#
#------------------------------------------------------------------------------#
add_subdirectory(runCase)
add_subdirectory(built4CubanLinx)
add_subdirectory(createState)
add_subdirectory(listLabel)
add_subdirectory(listState)
add_subdirectory(stateToCSV)
add_subdirectory(dtOOToSAFE)
add_subdirectory(blueKenue2Foam)
